# Tarea-if-while-switch

TareaForIfswicht/: CMakeLists.txt  EjercicioForWhile1.cpp  EjercicioForWhile2.cpp  EjercicioIfElse1.cpp  EjercicioIfElse2.cpp  EjercicioIfElse3.cpp  EjercicioSwitch2.cpp
