cmake_minimum_required(VERSION 3.27)
project(TareaForIfswicht)

set(CMAKE_CXX_STANDARD 17)

add_executable(TareaForIfswicht EjercicioForWhile1.cpp
        EjercicioForWhile2.cpp
        EjercicioIfElse1.cpp
        EjercicioIfElse2.cpp
        EjercicioIfElse3.cpp
        EjercicioSwitch1.cpp
        EjercicioSwitch2.cpp
)
